Add spark-streaming-kafka and spring-kafka

--- a/src/main/resources/environment.properties
+++ b/src/main/resources/environment.properties
@@ -4,3 +4,7 @@
 # Spring boot makes extensive use of configuration by convention. It provided a lot of defaults that
 # you can overrule if necessary. All available properties can be found here:
 # https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
+
+kafka.address=
+kafka.topic=twitter
+spark.address=
